# BaizeFinDB

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  项目开发总文档.md
backend/alembic/: env.py
backend/alembic/versions/: 20260430_0001_create_schema_health_checks.py  20260430_0002_create_provider_tables.py  20260430_0003_create_radar_tables.py  20260430_0004_create_radar_signal_reviews.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: health.py  providers.py  radar.py
backend/app/audit/: __init__.py
backend/app/core/: config.py  logging.py  redis.py
backend/app/db/: health_models.py  provider_models.py  radar_models.py  session.py
backend/app/governance/: __init__.py  review.py  share.py
backend/app/providers/: __init__.py  akshare.py  schemas.py  service.py
backend/app/radar/: rules.py  schemas.py  service.py
backend/app/tasks/: celery_app.py
docs/: PROJECT_STATUS.md
golden_cases/: radar_m3_2_sector_rules.json  radar_m4_review_rules.json  radar_m4_share_preview.json
infra/scripts/: collect_akshare_minimal.py  run_radar_scan.py  verify_akshare_minimal.py
tests/: test_akshare_provider.py  test_config.py  test_governance_review.py  test_governance_share.py  test_health.py  test_provider_api.py  test_provider_queries.py  test_provider_service.py  test_radar_api.py  test_radar_golden_cases.py  test_radar_service.py
